--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": "Mahdi Dibaiee <mdibaiee@aol.com> (http://dibaiee.ir/)",
   "contributors": [
-	"Alexander Reiff <alexander.reiff@me.com>"  
+    "Alexander Reiff <alexander.reiff@me.com>"
   ],
   "license": "MIT",
   "devDependencies": {
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "joi": "7.2.1",
-    "lodash": "4.0.0"
+    "lodash": "4.0.0",
+    "qs": "^6.1.0",
+    "snake-case": "^1.1.2"
   }
 }
