--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-watch": "0.6.1"
   },
   "dependencies": {
+    "boom": "^3.1.2",
     "joi": "7.2.1",
     "lodash": "4.0.0",
     "qs": "^6.1.0",
