Implement tests for route extensibility

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   },
   "scripts": {
-    "test": "lab -r html -o test/coverage.html -I core,Reflect,__core-js_shared__,System,_babelPolyfill,regeneratorRuntime"
+    "test": "lab -r console -o stdout -r html -o test/coverage.html -I core,Reflect,__core-js_shared__,System,_babelPolyfill,regeneratorRuntime"
   },
   "repository": {
     "git": "https://github.com/alexanderreiff/hapi-sequelize-crud"
