--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hapi-sequelize-crud2",
-  "version": "2.7.1",
-  "description": "Hapi plugin that automatically generates a more RESTful API for CRUD, building on hapi-sequelize-crud",
+  "version": "2.7.2",
+  "description": "Hapi plugin that automatically generates a RESTful API for CRUD, building on hapi-sequelize-crud",
   "main": "build/index.js",
   "config": {
     "ghooks": {
